💡 サムネイル用に画像編集のコメントを追加

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,7 @@
 
 <p>
   <strong>Portrait:</strong>
+  <%# サムネイル用に画像を編集して表示 %>
   <%= image_tag @user.portrait.variant(resize_to_limit: [100, 100]) %>
 </p>
 
